# xgrid

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  config.example.json  output.csv  pyproject.toml  showcase.py
src/xgrid/: __init__.py  cli.py  environment.py  registry.py  repro.py  runner.py
src/xgrid/environment/: __init__.py  config.py  fingerprint.py  lock.py  models.py  util.py
src/xgrid/environment/backends/: base.py  uv.py
src/xgrid/runner/: __init__.py  config.py  core.py  grid.py  io.py  logging.py  output.py  run.py  script.py  writers.py
tests/: test_cli_repro.py  test_environment.py  test_runner.py
